cluster/apps/default/proxmox/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-dashboard
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.178.9
    ports:
      - port: 8006
