cluster/apps/default/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-dashboard
  namespace: default
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8006
