cluster/apps/default/proxmox/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxmox-dashboard
  namespace: default
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-staging" # Overwrite certificate OR skip certificate
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
spec:
  ingressClassName: "proxmox"
  tls:
    - hosts:
        - "proxmox.${SECRET_DOMAIN}"
      # secretName: "proxmox-dashboard-tls"
  rules:
    - host: "proxmox.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: 192.168.178.9
              servicePort: 8006
